kubernetes-security/previous_homework/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homework
                operator: In
                values:
                - "true"
      containers:
      - name: webserver
        image: nginx:1.25.4
        workingDir: /homework
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","/bin/rm -f /homework/index.html"]
        ports:
        - name: http
          protocol: TCP
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: additional-data
          mountPath: /homework/conf/
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: nginx-claim
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: additional-data
        configMap:
          name: nginx-config-multi-env-files
