kubernetes-security/previous_homework/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /homepage()(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /(conf)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /(metrics)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
